Update Readme with usage instructions